# dotenv-secrets-scanner

./: .gitignore  .pre-commit-hooks.yaml  .secretsignore.example  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  baseline.example.json  pyproject.toml
.github/workflows/: ci.yml  docker-publish.yml  release.yml  test.yml
docs/: PATTERNS.md
src/scanner/: __init__.py  __main__.py  core.py  entropy.py  models.py  patterns.py  reports.py  validators.py
src/scanner/cli/: __init__.py  main.py
src/scanner/hooks/: __init__.py  pre_commit.py
src/scanner/utils/: __init__.py  config.py  git.py
tests/: test_basic.py  verify_cli_scenarios.py  verify_critical.py
